Wrapping some issues in try-catch statements, getting state name to display instead of state abbreviation on state maps

--- a/dev/public/styles.css
+++ b/dev/public/styles.css
@@ -70,6 +70,7 @@ form {
     border-radius: 10px;
     font-size: 24px;
     font-family: 'Fredoka One', cursive;
+    letter-spacing: 5px;
 }
 
 .slider {
